# cod-data-loader

./: all_weapons_data.pickle  pyproject.toml
cod_data_loader/: __init__.py  canny copy.py  cod-data.ipynb  keypoint.py  realtime.py  rectsearch.py  screen_scraper.py  templatematch.py  testContour.py  threshandboundtrackbar.py  thresholding.py
cod_data_loader/computer_vision_attempts/: cannycontours.py  cod-data.ipynb  keypoint2.py  lines.py  realtime.py  realtimecrop.py  threshandbound.py
cod_data_loader/scraper/: all_weapons_data.pickle  gun_data.ipynb  gun_data_loader.py  gun_scraper.py  gun_scraper.pytest  requirementtuple.py  test_data.py
cod_data_loader/scraper/d3/: weapon_viz.html
cod_data_loader/screen_scraper/: screen_scraper.py
cod_data_loader/utils/: utils_image.py
cod_data_loader/visualizer/: d3_css_style.css  data_to_viz.py
cod_data_loader/web_scraper/: gun_data.ipynb
tests/: test_pytest.py
