[tool.poetry]
name = "cod-data-loader"
version = "0.1.0"
description = ""
authors = ["Brandon John-Freso <brandonjf@gmail.com>"]
readme = "README.md"
packages = [{include = "cod_data_loader"}]

[tool.poetry.dependencies]
python = "3.11.1"
opencv-python = "^4.7.0.68"
matplotlib = "^3.6.2"
black = "^22.12.0"
flake8 = "^6.0.0"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
